test/expected/cli/shitbox_calc.out
=== precedence ===
14
=== parentheses and power ===
27
=== 128-bit in the default mood ===
1267650600228229401496703205376
=== variable read ===
42
=== located parse error ===
shit: 1:4: error: Unexpected character in the arithmetic expression.
     1 |  1 +
       |     ^~ here.
note: This is not a valid operator or operand.
=== located division by zero ===
shit: 1:6: error: Division by zero.
     1 |  5 / 0
       |       ^~ here.
note: The right operand evaluated to 0.
=== no expression ===
shit: 1:1: error: calc: Not enough arguments.
     1 |  shitbox calc
       |  ^~~~~~~~~~~~ here.
shit: note: Try `calc --help` for more info.
rc=2
